/*
Copyright 2023 Quark Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";
package tsot_cni;

service TsotCniService {
    rpc GetPodSandboxAddr(GetPodSandboxAddrReq) returns (GetPodSandboxAddrResp) {}
    rpc RemovePodSandbox(RemovePodSandboxReq) returns (RemovePodSandboxResp) {}
}

message GetPodSandboxAddrReq {
    string pod_uid = 1;
    string namespace = 2;
    string pod_name = 3;
    string container_id = 4;
}

message GetPodSandboxAddrResp {
    string error = 1;
    uint32 ip_addr = 2;
}

message RemovePodSandboxReq {
    string pod_uid = 1;
    string namespace = 2;
    string pod_name = 3;
    string container_id = 4;
}

message RemovePodSandboxResp {
    string error = 1;
}